Bugfix: banner not visible

--- a/css/blog_index.css
+++ b/css/blog_index.css
@@ -10,7 +10,7 @@ html {
 
 .intro-container {
     font-family: Arial, Helvetica, sans-serif;
-    background-image: url(../img/banner.png);
+    background-image: url(../img/banner.webp);
     background-position: center;
     background-size: cover;
     color: #d8dee9;
